correcting effin overlaps

--- a/tt-style.css
+++ b/tt-style.css
@@ -93,6 +93,7 @@ float: left;
 
 
 .inner-table {
+  table-layout: fixed;
   border-collapse: collapse;
   margin: 0px;
   border: 0px;
